<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_toolbar"
            app:titleTextColor="@color/colorWhite"
            android:paddingLeft="@dimen/tool_bar_padding_left_right"
            android:paddingRight="@dimen/tool_bar_padding_left_right">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="@dimen/profile_name_textView_height"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:text="@string/app_name"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/tool_bar_padding_left_right"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/new_entry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:hint="@string/journal_title_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/new_entry_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:hint="@string/journal_content_hint"
            android:imeOptions=""
            android:scrollHorizontally="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:gravity="top"
            android:inputType="textCapSentences|textMultiLine|textAutoCorrect"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
