...
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_google_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryDark"
            />

        <Button
...
